--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import "~bootstrap/dist/css/bootstrap.min.css"  angular.json dosyasından ekledim */
+
+.container .row h3 {
+    
+    border-radius: 15px;
+    text-align: center;
+}
