--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -4,7 +4,7 @@
 
 
             <h3 class="bg-warning text-grey p-3">
-                {{getName()}}'ın listesi
+                {{getName()}} ToDo List
             </h3>
 
             <div class="input-group mb-3">
